<resources>
    <string name="app_name">Burn cals</string>
    <string name="kg">kg</string>
    <string name="name">Matchatta Toyaem</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date">December 3, 2000</string>
    <string name="height">Height</string>
    <string name="height_value">167</string>
    <string name="cm">cm</string>
    <string name="weight">Weight</string>
    <string name="weight_value" translatable="false">60.2</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="female">Female</string>
    <string name="test">test</string>
    <string name="food_calories">Food Calories</string>
    <string name="unit">kcals</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="exercises">Exercises</string>
    <string name="delete">Delete</string>
    <string name="message">Do you want to delete?</string>
    <string name="no">NO</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">confirm</string>
    <string name="delete_check">Do you want to delete?</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="yes">YES</string>
    <string name="burned_calories">Burned calories</string>
    <string name="run">Run</string>
    <string name="burned_cals">Burned Cals</string>
    <string name="record">Record</string>
    <string name="add_exercises">Add Exercises</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="eating">Eating</string>
    <string name="walk">Walk</string>
    <string name="cycle">Cycle</string>
    <string name="other">Other</string>
    <string name="total">Total</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="carb">Carb.</string>
    <string name="remaining">Remaining</string>
    <string name="type">Type</string>
    <string name="health">Health</string>
    <string name="bmi" translatable="false">BMI</string>
    <string name="excess_calories">Excess Calories</string>
    <string name="minute">Minutes</string>
    <string name="exercises_time">Exercises Time</string>
    <string name="underweight">Underweight</string>
    <string name="norm">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="ex_obese">Extremely Obese</string>
    <string name="name_field">Name</string>
    <string name="location">Location</string>
    <string name="today">Today</string>
    <string name="register">Register</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="jauary">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="december_3_2000">December 3, 2000</string>
    <string name="summit">summit</string>
    <string name="food">Food</string>
    <string name="user">User</string>
    <string name="add_food">Add Food</string>
    <string name="exercises_goal">Exercises goal</string>
    <string name="eating_limit">Eating limit</string>
    <string name="th" translatable="false">TH</string>
    <string name="en" translatable="false">EN</string>
    <string name="max_eating" translatable="false">2000</string>
    <string name="goal_exercises" translatable="false">3000</string>
    <string name="empty_message">Please fill your answer.</string>
    <string name="update">Updated</string>
    <string name="description">\u0009 Burn Cals is an application that helps users to manage their lifestyle activities for having good health, including calculating food calories and recording exercises’ results. For the first step in the application, users have to log in and input their information, such as name, gender, date of birth, height, and weight. After that, users can add exercises that they want to record to the main page. For example, users can add running, indoor running, cycling, and walking exercises. Besides, users can add details of each food that they eat, after that the application will calculate total calories. For the application working, it collects data from every exercise and displays the result day by day, an average of the week, and the average of the month.</string>
</resources>
