<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

    <LinearLayout
        android:weightSum="11"
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/record" />

        <LinearLayout
            android:layout_weight="0.5"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/day"
                android:background="@color/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorPrimary"
                android:text="@string/day" />
            <Button
                android:id="@+id/week"
                android:background="@color/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:text="@string/week" />
            <Button
                android:id="@+id/month"
                android:background="@color/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textAlignment="viewStart"
                android:text="@string/month" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:id="@+id/date_picker"
            android:focusable="true"
            android:clickable="true"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <ImageView

                android:layout_gravity="center_vertical|start"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/calendar" />
            <TextView
                android:id="@+id/date"
                android:layout_marginStart="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:textSize="14sp"
                android:text="@string/today"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center">
            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:layout_centerInParent="true"
                android:id="@+id/circularProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cpb_background_progressbar_color="@color/colorPrimaryDarkerTransparent"
                app:cpb_background_progressbar_width="8dp"
                app:cpb_progress_direction="to_right"
                app:cpb_progressbar_color="@color/colorPrimary"
                app:cpb_progressbar_width="12dp"
                app:cpb_progress_max = "100"
                app:cpb_round_border="true" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/total"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/total_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDarker2"
                    android:text="@string/test"
                    android:textSize="36sp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/unit"/>
                    <ImageView
                        android:tint="@color/colorPrimary"
                        android:id="@+id/pic"
                        android:scaleType="fitCenter"
                        android:layout_gravity="bottom"
                        android:layout_width="20dp"
                        android:padding="2dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/burn"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/exercises_btn"
                android:background="@color/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/exercises" />
            <Button
                android:id="@+id/eating_btn"
                android:background="@color/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:text="@string/eating" />

        </LinearLayout>
        <FrameLayout
            android:layout_marginTop="10dp"
            android:id="@+id/container_record"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>