<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:background="@color/colorGray"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/test"/>
        <TextView
            android:id="@+id/foodDel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:text="@string/test"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:background="@drawable/border"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">
            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/box2"
                android:layout_marginEnd="10dp"
                android:text="@string/no"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/box3"
                android:text="@string/yes"
                android:textAllCaps="false"
                />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>