<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray"
        android:padding="5dp"
        android:gravity="start"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:orientation="horizontal"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/gender"
                    android:textSize="16sp" />

                <TextView
                    android:background="@color/clear"
                    android:id="@+id/genderVal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="end"
                    android:focusable="true" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit_black_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/date_of_birth"

                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:clickable="true"
                    android:text="@string/test"
                    android:gravity="end"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:focusable="true" />
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit_black_24dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:orientation="horizontal"
                android:focusable="true">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/height"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:clickable="true"
                    android:hint="0.0"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textAlignment="viewEnd"
                    android:inputType="numberDecimal"
                    android:background="@null"
                    android:textSize="16sp"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/textView6d1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/cm"
                    android:textAlignment="viewEnd"
                    android:layout_marginEnd="3dp"
                    android:textSize="16sp"
                    android:focusable="true" />
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit_black_24dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:orientation="horizontal"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/weight"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:clickable="true"
                    android:hint="0.0"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textAlignment="viewEnd"
                    android:inputType="numberDecimal"
                    android:background="@null"
                    android:textSize="16sp"
                    android:focusable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/kg"
                    android:textAlignment="viewEnd"
                    android:layout_marginEnd="3dp"
                    android:textSize="16sp"
                    android:focusable="true" />
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit_black_24dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/box2"
                    android:layout_marginEnd="10dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    />
                <Button
                    android:id="@+id/save"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/box2"
                    android:layout_marginEnd="10dp"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>