<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:background="@null"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_arrow_back_black_24dp"/>
            <TextView
                android:layout_weight="2"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/setting"/>
        </LinearLayout>
        <TextView
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:text="@string/exercises_goal"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/ex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="48sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/unit"
                android:layout_marginStart="10dp"
                android:textSize="18sp"/>
        </LinearLayout>
        <SeekBar
            android:layout_marginTop="20dp"
            android:id="@+id/ex_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="1"
            android:max="2000"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/box"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:text="@string/eating_limit"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="48sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/unit"
                android:layout_marginStart="10dp"
                android:textSize="18sp"/>
        </LinearLayout>
        <SeekBar
            android:layout_marginTop="20dp"
            android:id="@+id/food_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="4000"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/box"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/save"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/box2"
            android:text="@string/save"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>